v2.7
agregado el poder desactivar la  confirmación al salir.
se corrige la captura de mensajes de twitch y se intenta no capturar información repetida en la lista general.
agregado soporte a tiktok.
se corrigen varios errores menores.
v2.6
gracias a mateo celillo.
Agregado un cuadro combinado en las opciones de voz para elegir entre sistemas de texto a voz, este solo aparecerá si la casilla de usar sapi está desactivada.
Agregado el motor de texto a voz piper.
Actualizado el sistema de sonido.
se agrega un nuevo valor en la configuración en data.json (sistemaTTS) por lo que creo que es mejor empezar desde una configuración de cero para evitar problemas.
metalalchemist & Johan G.
solucionados problemas de ajustes: cuando cancelabas los ajustes se reflejaban. ya no debería pasar.
si pegabas una url como: https://www.youtube.com/live/3wzD80Irf40?feature=share el programa no agarraba los chats. ya debería hacerlo.
ya se deberían capturar los mensajes que tengan el valor None.
se agrega un convertidor de divisas para convertir las donaciones a la moneda  que desees.
se corrige un bug donde se agregaba el título al momento de agregar el enlace a tus favoritos del en vivo actual en twitch si el creador estaba strimeando. se debía agregar el nombre del canal en lugar del título del envivo.
agregadas 2 opciones nuevas en el botón mas opciones. copiar enlace y reproducir en el navegador.
correcciones de bugs con el buffer favoritos: no agregar mensajes duplicados ni tampoco poder agregar del mismo buffer de favoritos.
algunas optimisaciones menores al código.
se agrega un menú contextual en la lista  del chat  donde aparecen obciones varias como traducir mensaje al idioma del  programa copiar mensaje y archivar mensaje. gracias Johan G
sección archivar mensajes para cuando deseemos  agregar un mensaje importante. estos mensajes permanecerán en la aplicación hasta  que nosotros los borremos en la tercera pestaña que se agregó. gracias  Johan G